--- a/tf2c/cowmangliacoms/cfg/autoexec.cfg
+++ b/tf2c/cowmangliacoms/cfg/autoexec.cfg
@@ -8,23 +8,4 @@ exec NetSettings.cfg				// You'll find most/all net settings here including matc
 exec Sound.cfg						// Most/All sound settings can be found here including volume.
 exec gfxc.cfg						// The main part of the performance config
 exec TransparentViewmodels.cfg	// Uncommit this if you use TransparentViewmodels
-exec user/autoexec.cfg
-
-bind w +mfwd
-bind s +mback
-bind a +mleft
-bind d +mright
-
-alias +mfwd "-back;+forward;alias checkfwd +forward"
-alias +mback "-forward;+back;alias checkback +back"
-alias +mleft "-moveright;+moveleft;alias checkleft +moveleft"
-alias +mright "-moveleft;+moveright;alias checkright +moveright"
-alias -mfwd "-forward;checkback;alias checkfwd none"
-alias -mback "-back;checkfwd;alias checkback none"
-alias -mleft "-moveleft;checkright;alias checkleft none"
-alias -mright "-moveright;checkleft;alias checkright none"
-alias checkfwd none
-alias checkback none
-alias checkleft none
-alias checkright none
-alias none ""
+//exec user/autoexec.cfg			// added for mastercomfig, not needed in tf2c -jack
