fixed realcenteredweapons and added CREDITS.md
thanks to bonkmaykr  for helping me with realcenteredweapons. because of his contribution i've created a credits.md file with his name and contact information in it.

--- a/ql/realcenteredweapons/CENTEREDWEAPONS.cfg
+++ b/ql/realcenteredweapons/CENTEREDWEAPONS.cfg
@@ -1,14 +1,14 @@
-seta cg_weaponConfig_hmg "cg_guny 3.8;"
-seta cg_weaponConfig_cg "cg_guny 3.2;"
-seta cg_weaponConfig_pl "cg_guny 3.2;"
-seta cg_weaponConfig_ng "cg_guny 3;"
-seta cg_weaponConfig_gh "cg_guny 4.3;"
-seta cg_weaponConfig_bfg "cg_guny 5.4;"
-seta cg_weaponConfig_pg "cg_guny 4;"
-seta cg_weaponConfig_rg "cg_guny 5.4;"
-seta cg_weaponConfig_lg "cg_guny 3.5;"
-seta cg_weaponConfig_rl "cg_guny 5;"
-seta cg_weaponConfig_gl "cg_guny 5;"
-seta cg_weaponConfig_sg "cg_guny 3;"
-seta cg_weaponConfig_mg "cg_guny 3;"
-seta cg_weaponConfig_g "cg_guny 3.4;"
+seta cg_weaponConfig_hmg "wait 45; cg_guny 3.8;"
+seta cg_weaponConfig_cg "wait 45; cg_guny 3.2;"
+seta cg_weaponConfig_pl "wait 45; cg_guny 3.2;"
+seta cg_weaponConfig_ng "wait 45; cg_guny 3;"
+seta cg_weaponConfig_gh "wait 45; cg_guny 4.3;"
+seta cg_weaponConfig_bfg "wait 45; cg_guny 5.4;"
+seta cg_weaponConfig_pg "wait 45; cg_guny 4;"
+seta cg_weaponConfig_rg "wait 45; cg_guny 5.4;"
+seta cg_weaponConfig_lg "wait 45; cg_guny 3.5;"
+seta cg_weaponConfig_rl "wait 45; cg_guny 5;"
+seta cg_weaponConfig_gl "wait 45; cg_guny 5;"
+seta cg_weaponConfig_sg "wait 45; cg_guny 3;"
+seta cg_weaponConfig_mg "wait 45; cg_guny 3;"
+seta cg_weaponConfig_g "wait 45; cg_guny 3.4;"
