removed "host_thread_mode 1" from all gfxc.cfgs

--- a/tf2c/cleantf2c/cleantf2c/cfg/gfxc.cfg
+++ b/tf2c/cleantf2c/cleantf2c/cfg/gfxc.cfg
@@ -767,7 +767,7 @@ cl_setupallbones 0 					// Do not force every animation component of a model to 
 r_lightcache_zbuffercache 1 		// Load z cache data with the map
 studio_queue_mode 1 				// Use queue calls for studio renders
 				//0 				// Do not use queue calls for CPUs with 1 core
-host_thread_mode 1 					// Use the threaded frame behavior
+host_thread_mode 0 					// Do not use the threaded frame behavior
 mat_clipz 1 						// Clips what is drawn for a performance improvement
 
 r_fastzreject 0 			// Modern GPUs (hardware feature level d3d10) do not need the help
